[gd_scene load_steps=25 format=3 uid="uid://w0tbh5u1qv7j"]

[ext_resource type="Script" path="res://Scripts/Triggers/Trigger_Helpers/electricalDoor.gd" id="1_n0bnd"]
[ext_resource type="Texture2D" uid="uid://ca3yhnweu6i0d" path="res://Art/TriggerArt/ElectricalDoors/plh32x64DoorClosing.png" id="2_l7wyl"]
[ext_resource type="Texture2D" uid="uid://ctaxuqks4dr04" path="res://Art/TriggerArt/ElectricalDoors/plh32x64DoorOpening.png" id="3_7mmrv"]
[ext_resource type="PackedScene" uid="uid://djjr177758y2h" path="res://Scenes/Triggers/Trigger_Helpers/triggerKey.tscn" id="4_sv0q5"]
[ext_resource type="AudioStream" uid="uid://ctnkt71vbtt11" path="res://Sounds/invisibleblock.ogg" id="7_lvsb3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vyfuo"]
atlas = ExtResource("3_7mmrv")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub5hw"]
atlas = ExtResource("2_l7wyl")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5vh4"]
atlas = ExtResource("2_l7wyl")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgj7p"]
atlas = ExtResource("2_l7wyl")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcr0i"]
atlas = ExtResource("2_l7wyl")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r8s7"]
atlas = ExtResource("2_l7wyl")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj5lx"]
atlas = ExtResource("2_l7wyl")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihxlk"]
atlas = ExtResource("2_l7wyl")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p38u1"]
atlas = ExtResource("2_l7wyl")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyvg6"]
atlas = ExtResource("3_7mmrv")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7fvr"]
atlas = ExtResource("3_7mmrv")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebqak"]
atlas = ExtResource("3_7mmrv")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jewi6"]
atlas = ExtResource("3_7mmrv")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbin7"]
atlas = ExtResource("3_7mmrv")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpmqk"]
atlas = ExtResource("3_7mmrv")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_02lxq"]
atlas = ExtResource("3_7mmrv")
region = Rect2(192, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7y8ur"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyfuo")
}],
"loop": false,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub5hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5vh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgj7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcr0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r8s7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj5lx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihxlk")
}],
"loop": false,
"name": &"closing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p38u1")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyvg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7fvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebqak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jewi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbin7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpmqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02lxq")
}],
"loop": false,
"name": &"opening",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gw0w6"]
size = Vector2(32, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mmwg2"]
size = Vector2(32, 4)

[node name="electricalDoor" type="Node2D" node_paths=PackedStringArray("doorSprite", "staticBody", "collisionShape", "soundChild", "TriggerKeySprite")]
script = ExtResource("1_n0bnd")
doorSprite = NodePath("doorSprite")
staticBody = NodePath("StaticBody2D")
collisionShape = NodePath("StaticBody2D/CollisionShape2D")
soundChild = NodePath("AudioStreamPlayer2D")
TriggerKeySprite = NodePath("TriggerKeySprite")

[node name="doorSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(16, 32)
sprite_frames = SubResource("SpriteFrames_7y8ur")
animation = &"closed"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(16, 2)
scale = Vector2(1, 0.062)
shape = SubResource("RectangleShape2D_gw0w6")

[node name="TriggerKeySprite" parent="." instance=ExtResource("4_sv0q5")]
visible = false
position = Vector2(16, 96)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_lvsb3")
bus = &"Sound Effects"

[node name="WireDetection" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="WireDetection"]
position = Vector2(16, 0)
shape = SubResource("RectangleShape2D_mmwg2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WireDetection"]
position = Vector2(16, 64)
shape = SubResource("RectangleShape2D_mmwg2")

[connection signal="frame_changed" from="doorSprite" to="." method="onDoorSpriteFrameChanged"]
